--- a/09-Py-for-Cloud-DevOps-SRE/simple-streamlit-app-docker-py/Dockerfile
+++ b/09-Py-for-Cloud-DevOps-SRE/simple-streamlit-app-docker-py/Dockerfile
@@ -1,5 +1,6 @@
 FROM python
 WORKDIR /app
+RUN pip install streamlit -q
 COPY app.py .
 EXPOSE 8501
-CMD ["streamlit", "run", "app.py"]
+CMD ["streamlit", "run", "app.py", "--server.address", "0.0.0.0"]
