Add and modify files

--- a/10-Database/app-run/Dockerfile
+++ b/10-Database/app-run/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /app
 RUN pip install streamlit psycopg2-binary -q
 COPY app.py env.py ./app/
 EXPOSE 9000
-CMD ["streamlit", "run", "app.py", "--server.address", "0.0.0.0"]
+CMD ["streamlit", "run", "app.py", "--server.address", "0.0.0.0","--server.port", "9000"]
