--- a/10-Database/cloud-run-test-env/Dockerfile
+++ b/10-Database/cloud-run-test-env/Dockerfile
@@ -1,6 +1,6 @@
 FROM python
 WORKDIR /app
-RUN pip install streamlit -q
+RUN pip install streamlit psycopg2-binary google-cloud-aiplatform -q
 COPY . /app
 EXPOSE 9000
 CMD ["streamlit", "run", "app.py", "--server.address", "0.0.0.0", "--server.port", "9000"]
